# koompi-veha

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  dev.sh
.github/workflows/: release-edge.yml
docs/: billboard-setup.md  user-guide.md  veha-overview.md
docs/plans/: 2026-02-28-dooh-implementation-plan.md  2026-02-28-dooh-platform-design.md  2026-02-28-koompi-mepl-design.md  2026-02-28-phase1-phase2-implementation.md  2026-02-28-phase3-9-implementation.md  2026-02-28-product-vision.md  2026-02-28-production-audit.md  2026-02-28-production-hardening.md  2026-03-01-playlist-timeline-editor-design.md  2026-03-01-playlist-timeline-editor.md  2026-03-02-koompi-veha-edge-os-design.md  2026-03-02-player-media-controls-design.md  2026-03-03-board-fleet-connectivity-design.md  2026-03-03-board-fleet-connectivity.md  2026-03-03-board-id-autogenerate-design.md  2026-03-03-board-id-autogenerate.md  2026-03-03-playlist-editor-enhanced-preview.md  2026-03-03-veha-edge-design.md  2026-03-03-veha-edge.md
dooh-agent/: Cargo.toml
dooh-agent/src/: config.rs  main.rs  player_client.rs  ws_client.rs
dooh-api/: Cargo.toml
dooh-api/migrations/: 003_dooh.sql  003b_board_extensions.sql
dooh-api/src/: auth.rs  db.rs  main.rs  models.rs  resolver.rs  routes.rs  ws.rs
dooh-api/static/: app.js  index.html  style.css
dooh-cli/: Cargo.toml
dooh-cli/src/: main.rs
dooh-core/: Cargo.toml
dooh-core/src/: decoder.rs  playlist.rs
dooh-core/tests/: decoder_test.rs  image_test.rs  playlist_test.rs
dooh-output/: Cargo.toml
dooh-output/src/: framebuffer.rs  null.rs  window.rs
dooh-output/tests/: null_sink_test.rs
dooh-player/: Cargo.toml
dooh-player/src/: config.rs  ipc.rs  main.rs
dooh-web/: Cargo.toml  demo.html
dooh-web/src/: lib.rs
mepl-agent/: Cargo.toml
mepl-agent/src/: config.rs  main.rs  player_client.rs  ws_client.rs
mepl-api/: Cargo.toml
mepl-api/migrations/: 001_init.sql  002_indexes.sql
mepl-api/src/: auth.rs  db.rs  main.rs  models.rs  resolver.rs  routes.rs  ws.rs
mepl-api/static/: app.js  index.html  style.css
mepl-cli/: Cargo.toml
mepl-cli/src/: main.rs
mepl-core/: Cargo.toml
mepl-core/src/: command.rs  decoder.rs  error.rs  frame.rs  image.rs  lib.rs  playlist.rs  sink.rs
mepl-core/tests/: decoder_test.rs  image_test.rs  playlist_test.rs
mepl-output/: Cargo.toml
mepl-output/src/: framebuffer.rs  lib.rs  null.rs  window.rs
mepl-output/tests/: null_sink_test.rs
mepl-player/: Cargo.toml
mepl-player/src/: config.rs  ipc.rs  main.rs
mepl-web/: Cargo.toml  demo.html
mepl-web/src/: lib.rs
scripts/: install-edge.sh  install-server.sh
veha-agent/: Cargo.toml
veha-agent/src/: config.rs  lib.rs  main.rs  metrics.rs  player_client.rs  terminal.rs  ws_client.rs
veha-api/: Cargo.toml
veha-api/migrations/: 003_veha.sql  003b_board_extensions.sql  004_revenue.sql  005_alerts.sql  006_api_keys.sql
veha-api/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  screenshot_analysis.rs  ws.rs
veha-api/static/: app.js  index.html  style.css
veha-cli/: Cargo.toml
veha-cli/src/: main.rs
veha-core/: Cargo.toml
veha-core/src/: audio.rs  command.rs  decoder.rs  lib.rs  player.rs  playlist.rs  sink.rs
veha-core/tests/: decoder_test.rs  image_test.rs  playlist_test.rs
veha-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
veha-dashboard/scripts/: deploy.sh
veha-dashboard/src/: App.tsx  index.css
veha-dashboard/src/api/: advertisers.ts  alerts.ts  apikeys.ts  auth.ts  boards.ts  bookings.ts  campaigns.ts  client.ts  groups.ts  media.ts  playlists.ts  playlogs.ts  reports.ts  schedules.ts  users.ts  zones.ts
veha-dashboard/src/components/: ErrorBoundary.tsx
veha-dashboard/src/components/boards/: BoardMap.tsx  BoardScheduleTimeline.tsx  BoardTerminal.tsx
veha-dashboard/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
veha-dashboard/src/components/playlist/: PlaylistItemPanel.tsx  PreviewPlayer.tsx  Timeline.tsx  TimelineBlock.tsx  playlistUtils.ts
veha-dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  DropZone.tsx  EmptyState.tsx  Input.tsx  MediaThumb.tsx  Modal.tsx  Pagination.tsx  Select.tsx  Spinner.tsx  Textarea.tsx  Toast.tsx  index.ts
veha-dashboard/src/hooks/: useBoardStatus.ts
veha-dashboard/src/lib/: constants.ts  utils.ts
veha-dashboard/src/pages/: Advertisers.tsx  Alerts.tsx  BoardDetail.tsx  Boards.tsx  Bookings.tsx  CampaignDetail.tsx  Campaigns.tsx  Dashboard.tsx  Groups.tsx  Login.tsx  MediaLibrary.tsx  PlayLogs.tsx  PlaylistEditor.tsx  Playlists.tsx  Reports.tsx  Schedules.tsx  Settings.tsx  Users.tsx  Zones.tsx
veha-dashboard/src/stores/: auth.ts  theme.ts
veha-dashboard/src/types/: api.ts
veha-edge/: Cargo.toml
veha-edge/src/: config.rs  install.rs  main.rs  run.rs  status.rs  update.rs
veha-output/: Cargo.toml
veha-output/src/: framebuffer.rs  null.rs  window.rs
veha-output/tests/: null_sink_test.rs
veha-player/: Cargo.toml
veha-player/src/: config.rs  ipc.rs  keyboard.rs  lib.rs  main.rs
veha-web/: Cargo.toml  demo.html
veha-web/src/: lib.rs
