[workspace]
members = ["dooh-core", "dooh-output", "dooh-cli", "dooh-player", "dooh-api", "dooh-agent", "dooh-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/koompi/koompi-dooh"

[workspace.dependencies]
dooh-core = { path = "dooh-core" }
dooh-output = { path = "dooh-output" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
