[workspace]
members = ["veha-core", "veha-output", "veha-cli", "veha-player", "veha-api", "veha-agent", "veha-web", "veha-edge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/koompi/koompi-veha"

[workspace.dependencies]
veha-core = { path = "veha-core" }
veha-output = { path = "veha-output" }
veha-agent = { path = "veha-agent" }
veha-player = { path = "veha-player" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
