[package]
name = "dooh-player"
version.workspace = true
edition.workspace = true

[features]
default = []
framebuffer = ["dooh-output/framebuffer"]

[dependencies]
dooh-core.workspace = true
dooh-output.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
