[package]
name = "mepl-api"
version.workspace = true
edition.workspace = true

[dependencies]
mepl-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
axum = { version = "0.8", features = ["ws", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
futures = "0.3"
