[package]
name = "mepl-cli"
version.workspace = true
edition.workspace = true

[dependencies]
mepl-core.workspace = true
mepl-output.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
