[package]
name = "veha-agent"
version.workspace = true
edition.workspace = true

[dependencies]
veha-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
toml.workspace = true
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.26"
futures = "0.3"
chrono = "0.4"
base64 = "0.22"
portable-pty = "0.8"
