[package]
name = "veha-cli"
version.workspace = true
edition.workspace = true

[dependencies]
veha-core.workspace = true
veha-output.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest.workspace = true
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
