[package]
name = "veha-edge"
version.workspace = true
edition.workspace = true

[features]
default = []
framebuffer = ["veha-player/framebuffer"]

[dependencies]
veha-agent.workspace = true
veha-player.workspace = true
veha-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
