[package]
name = "veha-player"
version.workspace = true
edition.workspace = true

[features]
default = []
framebuffer = ["veha-output/framebuffer"]

[dependencies]
veha-core.workspace = true
veha-output.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rodio = "0.20"
