[package]
name = "veha-web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "console",
    "CustomEvent",
    "CustomEventInit",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "EventTarget",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlVideoElement",
    "Node",
    "Window",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
